# voicy

./: .env.example  Cargo.toml  LICENSE
src/: event_handler.rs  main.rs  sound.rs  voice_event_handler.rs
src/commands/: join.rs  leave.rs  mod.rs
voicy_tts/: Cargo.toml
voicy_tts/src/: lib.rs
