workspace = { members = ["voicy_tts"] }

[package]
name = "voicy"
version = "0.1.0"
edition = "2021"

[dependencies]
voicy_tts = { path = "voicy_tts" }
dotenv = "0.15.0"
serenity = { version = "0.12.0", default-features = false, features = [
    "cache",
    "framework",
    "standard_framework",
    "rustls_backend",
] }
songbird = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]
